# cleaner_bot

./: .gitignore  README.md
cleaner_bot_description/: CMakeLists.txt  package.xml
cleaner_bot_description/include/cleaner_bot_description/: mesh_cropper.h
cleaner_bot_description/launch/: view_world.launch.py
cleaner_bot_description/src/: boustrophedon_decomposition.cpp  mesh_cropper.cpp
cleaner_bot_description/urdf/: bot.urdf.xacro
